--- a/Tickr/Tickr/Base.lproj/Main.storyboard
+++ b/Tickr/Tickr/Base.lproj/Main.storyboard
@@ -117,36 +117,155 @@
                             </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OoD-0R-Qsm">
                                 <rect key="frame" x="0.0" y="20" width="600" height="50"/>
+                                <subviews>
+                                    <searchBar contentMode="redraw" placeholder="Add Symbol or Company" translatesAutoresizingMaskIntoConstraints="NO" id="I30-ak-rwq">
+                                        <rect key="frame" x="0.0" y="3" width="600" height="44"/>
+                                        <color key="tintColor" red="0.49917685249999999" green="0.1944865352" blue="0.77761243390000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </searchBar>
+                                </subviews>
                                 <color key="backgroundColor" red="0.01176470588" green="0.66274509800000003" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="Waa-Vt-5EZ"/>
+                                    <constraint firstItem="I30-ak-rwq" firstAttribute="centerY" secondItem="OoD-0R-Qsm" secondAttribute="centerY" id="adz-8x-xNi"/>
+                                    <constraint firstItem="I30-ak-rwq" firstAttribute="leading" secondItem="OoD-0R-Qsm" secondAttribute="leading" id="byJ-cd-toA"/>
+                                    <constraint firstAttribute="trailing" secondItem="I30-ak-rwq" secondAttribute="trailing" id="xXg-jy-SIt"/>
                                 </constraints>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="OoD-0R-Qsm" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="4XF-pL-QaT"/>
                             <constraint firstAttribute="trailingMargin" secondItem="OoD-0R-Qsm" secondAttribute="trailing" constant="-20" id="4j4-yk-lVd"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="p7X-7a-llA" secondAttribute="bottom" id="9jQ-7y-zOa"/>
                             <constraint firstItem="OoD-0R-Qsm" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="GWj-VP-SW0"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="p7X-7a-llA" secondAttribute="bottom" id="Rqj-PY-TlN"/>
                             <constraint firstItem="p7X-7a-llA" firstAttribute="top" secondItem="OoD-0R-Qsm" secondAttribute="bottom" id="VQR-e2-sxZ"/>
+                            <constraint firstItem="OoD-0R-Qsm" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="byS-Jw-lCI"/>
+                            <constraint firstItem="OoD-0R-Qsm" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="gKd-ph-UbX"/>
+                            <constraint firstItem="OoD-0R-Qsm" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="heX-k0-9IH"/>
                             <constraint firstAttribute="trailing" secondItem="p7X-7a-llA" secondAttribute="trailing" id="kpV-ib-wsT"/>
-                            <constraint firstItem="OoD-0R-Qsm" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="w1h-Kx-wL7"/>
                             <constraint firstItem="p7X-7a-llA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="zDr-xx-qLp"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="w1h-Kx-wL7"/>
+                                <exclude reference="byS-Jw-lCI"/>
+                                <exclude reference="gKd-ph-UbX"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
+                        <outlet property="searchBar" destination="I30-ak-rwq" id="Wbb-xe-Ea5"/>
                         <outlet property="tableView" destination="p7X-7a-llA" id="I2Y-Hp-Ok1"/>
+                        <segue destination="nrz-Ui-XNM" kind="presentation" identifier="searchSegue" animates="NO" modalTransitionStyle="crossDissolve" id="2CT-iY-vNW"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="600" y="490"/>
+        </scene>
+        <!--Search Table View Controller-->
+        <scene sceneID="stQ-gl-ZlR">
+            <objects>
+                <viewController id="nrz-Ui-XNM" customClass="SearchTableViewController" customModule="Tickr" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="DDe-0u-rgA"/>
+                        <viewControllerLayoutGuide type="bottom" id="mbr-xh-sGb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cKq-fM-2Tn">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s3P-ok-CEo">
+                                <rect key="frame" x="0.0" y="20" width="600" height="50"/>
+                                <subviews>
+                                    <searchBar contentMode="redraw" placeholder="Add Symbol or Company" translatesAutoresizingMaskIntoConstraints="NO" id="GGU-t9-gbb">
+                                        <rect key="frame" x="0.0" y="3" width="600" height="44"/>
+                                        <color key="tintColor" red="0.0078431372550000003" green="0.53333333329999999" blue="0.81960784310000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </searchBar>
+                                </subviews>
+                                <color key="backgroundColor" red="0.01176470588" green="0.66274509800000003" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="GGU-t9-gbb" secondAttribute="trailing" id="LeI-xc-7gI"/>
+                                    <constraint firstItem="GGU-t9-gbb" firstAttribute="leading" secondItem="s3P-ok-CEo" secondAttribute="leading" id="QA8-z1-WRC"/>
+                                    <constraint firstAttribute="height" constant="50" id="Xs9-zU-tbC"/>
+                                    <constraint firstItem="GGU-t9-gbb" firstAttribute="centerY" secondItem="s3P-ok-CEo" secondAttribute="centerY" id="lbc-E3-C29"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ADK-pT-4is">
+                                <rect key="frame" x="0.0" y="70" width="600" height="530"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="searchResultCell" rowHeight="50" id="zBu-K0-mtz" customClass="SearchResultCell" customModule="Tickr" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zBu-K0-mtz" id="dB4-iZ-nPG">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="49.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UWTI" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mws-PP-dwU">
+                                                    <rect key="frame" x="16" y="5" width="300" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Company Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6H8-dH-7pp">
+                                                    <rect key="frame" x="16" y="25.5" width="300" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="hTP-Tc-54v"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.3822798295" green="0.3822798295" blue="0.3822798295" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rbr-ZB-ePd">
+                                                    <rect key="frame" x="570" y="14" width="22" height="22"/>
+                                                    <connections>
+                                                        <action selector="addButtonWasPressed:" destination="zBu-K0-mtz" eventType="touchUpInside" id="iLH-Ab-bcM"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="leadingMargin" secondItem="mws-PP-dwU" secondAttribute="leading" constant="-8" id="01p-Ka-GLJ"/>
+                                                <constraint firstItem="6H8-dH-7pp" firstAttribute="leading" secondItem="mws-PP-dwU" secondAttribute="leading" id="94t-j0-sde"/>
+                                                <constraint firstItem="mws-PP-dwU" firstAttribute="top" secondItem="dB4-iZ-nPG" secondAttribute="top" constant="5" id="Aj3-hS-Dox"/>
+                                                <constraint firstItem="rbr-ZB-ePd" firstAttribute="centerY" secondItem="dB4-iZ-nPG" secondAttribute="centerY" id="G2p-lH-Tw9"/>
+                                                <constraint firstItem="mws-PP-dwU" firstAttribute="width" secondItem="dB4-iZ-nPG" secondAttribute="width" multiplier="0.5" id="J6H-Hh-Uua"/>
+                                                <constraint firstItem="6H8-dH-7pp" firstAttribute="width" secondItem="mws-PP-dwU" secondAttribute="width" id="Kwn-72-Fmi"/>
+                                                <constraint firstItem="6H8-dH-7pp" firstAttribute="top" secondItem="mws-PP-dwU" secondAttribute="bottom" id="oRv-aD-xs3"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="rbr-ZB-ePd" secondAttribute="trailing" id="rBo-iS-R5S"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="nameLabel" destination="6H8-dH-7pp" id="lO2-Jh-xah"/>
+                                            <outlet property="symbolLabel" destination="mws-PP-dwU" id="Hup-W5-5cm"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="nrz-Ui-XNM" id="zgg-I4-A9c"/>
+                                    <outlet property="delegate" destination="nrz-Ui-XNM" id="0n6-G4-dfA"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ADK-pT-4is" firstAttribute="leading" secondItem="cKq-fM-2Tn" secondAttribute="leading" id="3Bm-JJ-Cgt"/>
+                            <constraint firstItem="mbr-xh-sGb" firstAttribute="top" secondItem="ADK-pT-4is" secondAttribute="bottom" id="3J8-Gx-6Cn"/>
+                            <constraint firstItem="ADK-pT-4is" firstAttribute="top" secondItem="s3P-ok-CEo" secondAttribute="bottom" id="BkP-nW-iVh"/>
+                            <constraint firstItem="s3P-ok-CEo" firstAttribute="leading" secondItem="cKq-fM-2Tn" secondAttribute="leading" id="KJG-T9-V3s"/>
+                            <constraint firstItem="s3P-ok-CEo" firstAttribute="top" secondItem="DDe-0u-rgA" secondAttribute="bottom" id="Lgt-Cc-8Mb"/>
+                            <constraint firstAttribute="trailing" secondItem="ADK-pT-4is" secondAttribute="trailing" id="mb6-fh-QOI"/>
+                            <constraint firstAttribute="trailing" secondItem="s3P-ok-CEo" secondAttribute="trailing" id="oRu-c9-uxH"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="searchBar" destination="GGU-t9-gbb" id="jLm-bV-jFu"/>
+                        <outlet property="tableView" destination="ADK-pT-4is" id="isE-Zi-S5C"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="krE-wU-Vf8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="600" y="1178"/>
         </scene>
     </scenes>
 </document>
